"""initial migration

Revision ID: 1a989dc9b924
Revises: 
Create Date: 2026-05-22 19:56:37.741032

"""
from alembic import op
import sqlalchemy as sa


# revision identifiers, used by Alembic.
revision = '1a989dc9b924'
down_revision = None
branch_labels = None
depends_on = None


def upgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('price_cache',
    sa.Column('symbol', sa.String(), nullable=False),
    sa.Column('price', sa.Numeric(), nullable=False),
    sa.Column('fetched_at', sa.DateTime(), nullable=False),
    sa.PrimaryKeyConstraint('symbol')
    )
    op.create_table('user',
    sa.Column('id', sa.UUID(), nullable=False),
    sa.Column('username', sa.String(), nullable=False),
    sa.Column('email', sa.String(), nullable=False),
    sa.Column('hashed_passwd', sa.String(), nullable=False),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('email'),
    sa.UniqueConstraint('username')
    )
    op.create_table('portfolio',
    sa.Column('id', sa.UUID(), nullable=False),
    sa.Column('account_type', sa.Enum('taxable', 'roth', 'k401', name='accounttype'), nullable=False),
    sa.Column('user_id', sa.UUID(), nullable=False),
    sa.Column('name', sa.String(), nullable=False),
    sa.ForeignKeyConstraint(['user_id'], ['user.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('watchlist',
    sa.Column('id', sa.UUID(), nullable=False),
    sa.Column('user_id', sa.UUID(), nullable=False),
    sa.Column('symbol', sa.String(), nullable=False),
    sa.ForeignKeyConstraint(['symbol'], ['price_cache.symbol'], ),
    sa.ForeignKeyConstraint(['user_id'], ['user.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('holding',
    sa.Column('id', sa.UUID(), nullable=False),
    sa.Column('portfolio_id', sa.UUID(), nullable=False),
    sa.Column('symbol', sa.String(), nullable=False),
    sa.Column('shares', sa.Numeric(), nullable=False),
    sa.Column('avg_cost_basis', sa.Numeric(), nullable=False),
    sa.ForeignKeyConstraint(['portfolio_id'], ['portfolio.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('transaction',
    sa.Column('id', sa.UUID(), nullable=False),
    sa.Column('holding_id', sa.UUID(), nullable=False),
    sa.Column('transaction_type', sa.Enum('BUY', 'SELL', name='transactiontype'), nullable=False),
    sa.Column('shares', sa.Numeric(), nullable=False),
    sa.Column('price', sa.Numeric(), nullable=False),
    sa.Column('transacted_at', sa.DateTime(), nullable=False),
    sa.ForeignKeyConstraint(['holding_id'], ['holding.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    # ### end Alembic commands ###


def downgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_table('transaction')
    op.drop_table('holding')
    op.drop_table('watchlist')
    op.drop_table('portfolio')
    op.drop_table('user')
    op.drop_table('price_cache')
    # ### end Alembic commands ###
